[tool.poetry]
name = "advent2023"
version = "0.1.0"
description = "Kevin's 2023 Advent of Code solutions"
authors = ["Kevin H Wilson <khwilson@gmail.com>"]
packages = [{include = "advent", from = "src"}]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.7"
sympy = "^1.12"
tqdm = "^4.66.1"
numpy = "^1.26.2"

[tool.poetry.scripts]
advent = "advent.cli:cli"


[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.13"
black = "^23.11.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
